# PQDID

did_ledger_node/: .env  Cargo.toml  README.md  docker-compose.yml  dockerfile  init.sql  log4rs.yml  sqisign.keys
did_ledger_node/migrations/2023-11-29-115134_create_did_documents/: down.sql  up.sql
did_ledger_node/src/: config.rs  main.rs  peers.rs
did_ledger_node/src/consensus/: mod.rs  protocol.rs  types.rs
did_ledger_node/src/database/: mod.rs  models.rs  schema.rs
did_ledger_node/src/did_protocol/: protocol.rs  types.rs
did_ledger_node/src/pqc_sign/: internal.rs  types.rs
did_server_backend/: .env  Cargo.toml  README.md  docker-compose.yml  dockerfile  init.sql
did_server_backend/migrations/2023-12-06-074242_users/: up.sql
did_server_backend/migrations/2023-12-06-074301_certificates/: down.sql  up.sql
did_server_backend/migrations/2023-12-07-105837_precertificates/: down.sql  up.sql
did_server_backend/src/: config.rs  error.rs  jwt_auth.rs  main.rs  peers.rs  types.rs
did_server_backend/src/consensus/: protocol.rs  types.rs
did_server_backend/src/database/: mod.rs  models.rs  schema.rs
did_server_backend/src/did_protocol/: mod.rs  protocol.rs  types.rs
did_server_backend/src/pqc_sign/: internal.rs  mod.rs  types.rs
did_server_backend/src/routes/: auth.rs  issuer.rs  mod.rs  owner.rs  verifier.rs
pqdid_app/: README.md  pubspec.yaml
pqdid_app/lib/: main.dart
pqdid_app/linux/: CMakeLists.txt  my_application.cc
pqdid_app/test/: widget_test.dart
pqdid_app/web/: index.html  manifest.json
sqisign_ffi_rs/: Cargo.toml
(+13 files in other folders)
