[package]
name = "did_ledger_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
bitmaps = "3.2.0"
diesel = { version = "2.1.4", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15.7"
hex = "0.4.3"
log = "0.4.20"
log4rs = "1.2.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["net", "full"] }
