[package]
name = "did_server_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
anyhow = "1.0.75"
bincode = "1.3.3"
chrono = "0.4.31"
derive_more = "0.99.17"
diesel = { version = "2.1.4", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "full"] }
